kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dft-street-manager-ux-deployment
spec:
  selector:
    matchLabels:
      app: dft-street-manager-ux
  replicas: 2
  template:
    metadata:
      labels:
        app: dft-street-manager-ux
    spec:
      containers:
      - name: dft-street-manager-ux
        image: <DOCKER_REPO_HOSTNAME>/<DOCKER_PROJECT_ID>/<DOCKER_REPO_NAME>:<DOCKER_TAG>
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
            cpu: 0.1
      nodeSelector:
        system: "false"
