kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: dft-street-manager-ux-ingress
spec:
  rules:
    - host: ux.stwrks-dev.net
      http:
        paths:
          - backend:
              serviceName: dft-street-manager-ux-service
              servicePort: 80
            path: /
